# arcadeproject

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirments.txt
assets/: _end.tmx  _first.tmx  _fourth.tmx  _level.tmx  _menu.tmx  _school_level.tmx  _second.tmx  _start.tmx  default.tsx  final_scene_map.tmx  final_scene_tiles1.tsx  first_level_map.tmx  hospital.tsx  mainmap.tmx  my_map.tmx  my_textures.tsx  my_textures1.tsx  pits.tsx  road.tsx  sand.tsx  start_map.tmx  start_scene_map.tmx  start_scene_tiles.tsx  start_scene_tiles2.tsx  start_scene_tiles3.tsx  tiles.tsx
game/: __init__.py  __main__.py  change_screen.py  game.py  main.py  types.py
game/components/: __init__.py  dialog.py  menu_widgets.py
game/config/: __init__.py  sounds.py  textures.py  tilemaps.py
game/screens/: __init__.py  base.py  change_screen.py  end.py  fifth_level.py  final_screen.py  first_level.py  fourth_level.py  grid.py  menu.py  motor_skills_level.py  patience_level.py  school_level.py  second_level.py  start.py  third_level.py
game/utils/: __init__.py  api.py  manage_time.py
mygame/: __main__.py  game.py  main.py
