[project]
name = "arcadeproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade[all]>=3.3.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",
]
