[project]
name = "arcadeproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade[all]>=3.3.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Докстроки
    "D100", "D101", "D102", "D103", "D104", "D107",

    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # Todo
    "TD003", "FIX002",

    # Магические числа
    "PLR2004",

    # Псевдо-рандом
    "S311",
]
